# spotuify

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  PRODUCT.md  README.md  TODO.md  deny.toml  release-please-config.json
.github/workflows/: ci.yml  release-lockfile.yml  release-matrix.yml  release-please.yml  release.yml
clients/macos/: .gitignore  README.md  project.yml
crates/spotuify-audio/: Cargo.toml
crates/spotuify-audio/src/: analyzer.rs  lib.rs  source.rs
crates/spotuify-audio/src/loopback/: cpal_capture.rs  mod.rs  pipewire.rs
crates/spotuify-cli/: Cargo.toml
crates/spotuify-cli/src/: actions.rs  cli_args.rs  commands.rs  lib.rs  output.rs  selection.rs  style.rs
crates/spotuify-config/: Cargo.toml
crates/spotuify-config/src/: document.rs  lib.rs  model.rs  path.rs  tests.rs
crates/spotuify-core/: Cargo.toml
crates/spotuify-core/src/: actions.rs  analytics.rs  ids.rs  lib.rs  lyrics_provider.rs  provider.rs  queue_merge.rs  uri.rs
crates/spotuify-daemon/: Cargo.toml
crates/spotuify-daemon/src/: analytics.rs  auth_sessions.rs  clock.rs  diagnostics.rs  handler.rs  lastfm_import.rs  lib.rs  logging.rs  player_factory.rs  provider_factory.rs  provider_registry.rs  queue_warm.rs  retention.rs  server.rs  session_tracker.rs  state.rs  status.rs  undo.rs  update.rs  viz_coordinator.rs
crates/spotuify-daemon/src/handlers/: admin.rs  analytics.rs  library.rs  media.rs  mod.rs  ops.rs  playback.rs  playlists.rs  reminders.rs  search.rs  viz.rs
crates/spotuify-daemon/tests/: session_tracker_finalize.rs
crates/spotuify-keychain/: Cargo.toml
crates/spotuify-keychain/src/: lib.rs
crates/spotuify-launcher/: Cargo.toml
crates/spotuify-launcher/src/: lib.rs
crates/spotuify-lyrics/: Cargo.toml
crates/spotuify-lyrics/src/: alignment.rs  lib.rs  lrclib_provider.rs  parser.rs  spotify_provider.rs
crates/spotuify-mcp/: Cargo.toml
crates/spotuify-mcp/src/: bridge.rs  daemon_client.rs  lib.rs  resources.rs  rpc.rs  server.rs  tools.rs
crates/spotuify-mcp/tests/: resources.rs  rpc.rs  tool_routing.rs
crates/spotuify-mcp/tests/snapshots/: manifest__mcp_manifest_matches_snapshot.snap
crates/spotuify-player/: Cargo.toml
crates/spotuify-player/src/: config.rs  events.rs  lib.rs
crates/spotuify-player/src/backends/: audio_counter_tap.rs  clock.rs  connect_only.rs  first_party_auth.rs  librespot_sink_chain.rs  mercury_cache.rs  mock.rs  mod.rs  premium_gate.rs  recovering_sink.rs  spotifyd.rs  token_bridge.rs  visualization_tap.rs  worker.rs
crates/spotuify-player/src/backends/embedded/: mod.rs
crates/spotuify-player/tests/: connect_only.rs  mock_backend.rs  premium_gate.rs  recovering_sink.rs  spotifyd_backend.rs
crates/spotuify-protocol/: Cargo.toml
crates/spotuify-protocol/src/: agent_playlists.rs  analytics.rs  event_log.rs  ipc_client.rs  ipc_stream.rs  lib.rs  operations.rs  output.rs  paths.rs
crates/spotuify-protocol/tests/: analytics_protocol.rs  auth_migration_event.rs  daemon_event_phase9.rs  event_log.rs  operations.rs  provider_wire.rs  receipts_and_events.rs  request_kinds_roster.rs  sync_provider_identity.rs
crates/spotuify-provider-fake/: Cargo.toml
crates/spotuify-provider-fake/src/: conformance.rs  fixtures.rs  lib.rs
crates/spotuify-provider-fake/tests/: conformance.rs
crates/spotuify-search/: Cargo.toml
crates/spotuify-search/src/: lib.rs  reindex.rs
crates/spotuify-spotify/: Cargo.toml
crates/spotuify-spotify/src/: actions.rs  auth.rs  client.rs  compat.rs  config.rs  endpoints.rs  error.rs  lib.rs  mercury.rs  provider.rs  rate_limit.rs  selection.rs
crates/spotuify-spotify/tests/: client_empty_body.rs  compat_normalizer.rs  error_classification.rs  provider_conformance.rs  rate_limit.rs  refresh_planner.rs
crates/spotuify-store/: Cargo.toml
crates/spotuify-store/src/: lastfm_import.rs  lib.rs  listen_facts.rs  mutation_dedup.rs  operations.rs  provider_reconciliations.rs
crates/spotuify-store/tests/: analytics_queries.rs  migrations.rs  mutation_dedup.rs  operations.rs  provider_reconciliations.rs  receipts.rs
crates/spotuify-sync/: Cargo.toml
crates/spotuify-sync/src/: lib.rs  privacy.rs  sync_loop.rs
crates/spotuify-sync/tests/: provider_sync.rs  refetch_gate.rs
crates/spotuify-system/: Cargo.toml
crates/spotuify-system/src/: discord.rs  hooks.rs  lib.rs  media_controls.rs  notifications.rs
crates/spotuify-tui/: Cargo.toml
crates/spotuify-tui/src/: app.rs  hit.rs  lib.rs  now_playing.rs  tui_actions.rs  ui.rs
crates/spotuify-tui/src/widgets/: album_art.rs  mod.rs  skeleton.rs  spectrum.rs  style.rs  terminal.rs
docs/: README.md  security-audit-rubric-v2.md  security-audit-rubric.md  security-audit-v2-report.md
docs/blueprint/: 00-overview.md  01-architecture.md  02-data-model.md  03-spotify-provider.md  04-sync-cache.md  05-search.md  06-cli.md  07-player.md  08-tui.md  09-agent-workflows.md  10-observability.md  11-config-auth.md  12-roadmap.md  13-decision-log.md  14-reuse-strategy.md  15-coding-rules.md  16-analytics.md  README.md
docs/implementation/: 00-current-state.md  01-phase-0-stabilize.md  02-phase-1-cli-parity.md  03-phase-2-daemon-protocol.md  04-phase-3-local-store-search.md  05-phase-4-tui-redesign.md  06-phase-5-agent-playlists.md  07-testing-conformance.md  08-mxr-reuse-map.md  11-phase-8-mcp-server.md  12-phase-9-librespot-embed.md  13-phase-10-analytics-derivations.md  14-phase-11-cross-platform.md  (+3 more)
scripts/: release_change_scope.sh  release_change_scope_test.sh  render_homebrew_formula.sh  smoke.sh  test_quality_audit.sh  test_quality_audit_test.sh
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
src/: actions.rs  agent_playlists.rs  analytics.rs  app.rs  auth.rs  commands.rs  config.rs  diagnostics.rs  logging.rs  main.rs  output.rs  protocol.rs  reindex.rs  search.rs  selection.rs  spotify.rs  spotifyd.rs  store.rs  sync.rs  tui_actions.rs  ui.rs
tests/: cli_cache.rs  cli_exit_codes.rs  cli_fake_daemon.rs  cli_help.rs  uri_string_ops.rs  workspace_boundaries.rs
(+358 files in other folders)
