[package]
name = "spotuify"
version.workspace = true
edition.workspace = true
publish = false

[workspace]
resolver = "2"
# Members are listed explicitly during the Phase 7 incremental extraction
# (see docs/implementation/10-phase-7-workspace-split.md). Each PR that
# extracts a crate adds its path here. Switch to `crates/*` glob once all
# crates exist.
members = [".", "crates/*"]
default-members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
panic = "warn"
todo = "warn"

[workspace.dependencies]
# Internal crates (added as Phase 7 progresses)
spotuify-core = { path = "crates/spotuify-core", version = "0.1.0" }
spotuify-protocol = { path = "crates/spotuify-protocol", version = "0.1.0" }
spotuify-store = { path = "crates/spotuify-store", version = "0.1.0" }
spotuify-search = { path = "crates/spotuify-search", version = "0.1.0" }
spotuify-spotify = { path = "crates/spotuify-spotify", version = "0.1.0" }
spotuify-player = { path = "crates/spotuify-player", version = "0.1.0" }
spotuify-sync = { path = "crates/spotuify-sync", version = "0.1.0" }
spotuify-system = { path = "crates/spotuify-system", version = "0.1.0" }
spotuify-lyrics = { path = "crates/spotuify-lyrics", version = "0.1.0" }
spotuify-audio = { path = "crates/spotuify-audio", version = "0.1.0" }
spotuify-daemon = { path = "crates/spotuify-daemon", version = "0.1.0" }
spotuify-cli = { path = "crates/spotuify-cli", version = "0.1.0" }
spotuify-tui = { path = "crates/spotuify-tui", version = "0.1.0" }
spotuify-mcp = { path = "crates/spotuify-mcp", version = "0.1.0" }
# spotuify-spotify = { path = "crates/spotuify-spotify", version = "0.1.0" }
# spotuify-player = { path = "crates/spotuify-player", version = "0.1.0" }
# spotuify-sync = { path = "crates/spotuify-sync", version = "0.1.0" }
# spotuify-system = { path = "crates/spotuify-system", version = "0.1.0" }
# spotuify-lyrics = { path = "crates/spotuify-lyrics", version = "0.1.0" }
# spotuify-audio = { path = "crates/spotuify-audio", version = "0.1.0" }
# spotuify-daemon = { path = "crates/spotuify-daemon", version = "0.1.0" }
# spotuify-cli = { path = "crates/spotuify-cli", version = "0.1.0" }
# spotuify-tui = { path = "crates/spotuify-tui", version = "0.1.0" }
# spotuify-mcp = { path = "crates/spotuify-mcp", version = "0.1.0" }

# Error handling
anyhow = "1"
thiserror = "2"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
sha2 = "0.10"

# Database
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlite",
] }

# Search
tantivy = "0.22"

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
url = "2"
base64 = "0.22"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-image = { version = "10", default-features = false, features = [
  "crossterm",
  "image-defaults",
  "tokio",
] }
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
  "gif",
  "bmp",
] }

# CLI
clap = { version = "4", features = ["derive"] }

# Concurrency
parking_lot = "0.12"
dashmap = "6"

# Filesystem
dirs = "6"
tempfile = "3"

# Credentials
keyring = { version = "3", features = ["apple-native"] }
rpassword = "7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Misc
rand = "0.8"
open = "5"

# JSON Schema (Phase 8 MCP)
schemars = "0.8"

# Testing
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
wiremock = "0.6"
pretty_assertions = "1"

[dependencies]
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }
spotuify-store = { workspace = true }
spotuify-search = { workspace = true }
spotuify-spotify = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
keyring = { workspace = true }
open = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
ratatui-image = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
tantivy = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[profile.release]
lto = true
strip = true
codegen-units = 1

[lints]
workspace = true
