[package]
name = "spotuify"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[workspace]
resolver = "2"
# Members are listed explicitly during the Phase 7 incremental extraction
# (see docs/implementation/10-phase-7-workspace-split.md). Each PR that
# extracts a crate adds its path here. Switch to `crates/*` glob once all
# crates exist.
members = [".", "crates/*"]
default-members = ["."]

[workspace.package]
version = "0.1.33"
edition = "2021"
rust-version = "1.88"
repository = "https://github.com/planetaryescape/spotuify"
homepage = "https://github.com/planetaryescape/spotuify"
documentation = "https://github.com/planetaryescape/spotuify"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
panic = "warn"
todo = "warn"

[workspace.dependencies]
# Internal crates (added as Phase 7 progresses)
spotuify-core = { path = "crates/spotuify-core", version = "0.1.0" }
spotuify-protocol = { path = "crates/spotuify-protocol", version = "0.1.0" }
spotuify-store = { path = "crates/spotuify-store", version = "0.1.0" }
spotuify-search = { path = "crates/spotuify-search", version = "0.1.0" }
spotuify-spotify = { path = "crates/spotuify-spotify", version = "0.1.0" }
spotuify-player = { path = "crates/spotuify-player", version = "0.1.0" }
spotuify-sync = { path = "crates/spotuify-sync", version = "0.1.0" }
spotuify-system = { path = "crates/spotuify-system", version = "0.1.0", default-features = false }
spotuify-lyrics = { path = "crates/spotuify-lyrics", version = "0.1.0" }
spotuify-audio = { path = "crates/spotuify-audio", version = "0.1.0", default-features = false }
spotuify-daemon = { path = "crates/spotuify-daemon", version = "0.1.0", default-features = false }
spotuify-cli = { path = "crates/spotuify-cli", version = "0.1.0" }
spotuify-tui = { path = "crates/spotuify-tui", version = "0.1.0" }
spotuify-mcp = { path = "crates/spotuify-mcp", version = "0.1.0" }
spotuify-keychain = { path = "crates/spotuify-keychain", version = "0.1.0" }
# spotuify-spotify = { path = "crates/spotuify-spotify", version = "0.1.0" }
# spotuify-player = { path = "crates/spotuify-player", version = "0.1.0" }
# spotuify-sync = { path = "crates/spotuify-sync", version = "0.1.0" }
# spotuify-system = { path = "crates/spotuify-system", version = "0.1.0" }
# spotuify-lyrics = { path = "crates/spotuify-lyrics", version = "0.1.0" }
# spotuify-audio = { path = "crates/spotuify-audio", version = "0.1.0" }
# spotuify-daemon = { path = "crates/spotuify-daemon", version = "0.1.0" }
# spotuify-cli = { path = "crates/spotuify-cli", version = "0.1.0" }
# spotuify-tui = { path = "crates/spotuify-tui", version = "0.1.0" }
# spotuify-mcp = { path = "crates/spotuify-mcp", version = "0.1.0" }

# Error handling
anyhow = "1"
thiserror = "2"

# Async
# Keep the shared Tokio surface explicit. `full` silently pulls in
# feature families this workspace does not use and makes every crate
# pay for them during normal iteration.
tokio = { version = "1", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
sha2 = "0.10"
unicode-bidi = "0.3"

# Database
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlite",
] }

# Search
tantivy = "0.22"

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
url = "2"
base64 = "0.22"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-image = { version = "10", default-features = false, features = [
  "crossterm",
  "tokio",
] }
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
  "gif",
  "bmp",
] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"

# Concurrency
parking_lot = "0.12"
dashmap = "6"

# Filesystem
dirs = "6"
tempfile = "3"
fs2 = "0.4"

# Credentials — `keyring` is now an implementation detail of the
# `spotuify-keychain` crate; depend on that crate instead so per-target
# features stay encapsulated. `rpassword` is still used directly by the
# OAuth prompt.
rpassword = "7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Misc
rand = "0.8"
open = "5"

# JSON Schema (Phase 8 MCP)
schemars = "0.8"
axum = "0.7"

# Phase 14 system integration.
souvlaki = "0.8"
notify-rust = "4"
discord-rich-presence = "0.2"
winit = "0.30"

# Testing
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
wiremock = "0.6"
pretty_assertions = "1"

# Phase 9.2+ — embedded librespot Player + Spirc.
# Pinned to 0.8.x. Most crates take default features (which include
# native-tls). librespot-playback opts out of default features to
# avoid pulling all audio backends; audio backend selection lives in
# the spotuify-player crate's own feature flags (Phase 9.5).
# librespot-protocol opts out to avoid build-script bloat.
librespot-core = { version = "0.8" }
librespot-connect = { version = "0.8" }
librespot-oauth = { version = "0.8" }
librespot-metadata = { version = "0.8" }
librespot-playback = { version = "0.8", default-features = false }
librespot-protocol = { version = "0.8", default-features = false }

# Phase 9.2: keep vergen pinned so librespot-core 0.8's build.rs
# stays buildable. vergen-gitcl 1.0.8 transitively pulls vergen-lib
# 0.1.6; vergen 9.0.6 is the last vergen release that ALSO uses
# vergen-lib 0.1 (newer vergen 9.1.x bumped to vergen-lib 9.1 and is
# silently incompatible with vergen-gitcl 1.0.x). Do not bump until
# vergen-gitcl 1.1+ ships with a matching vergen-lib upgrade.
vergen = "=9.0.6"

[features]
# Default build is the shippable one — the daemon needs embedded
# librespot to function (Phase 0 removed the Spotifyd/ConnectOnly
# fallbacks), so a vanilla `cargo build` must include both
# `embedded-playback` and a concrete audio backend. rodio is the
# portable cross-platform pick.
#
# Devs who want fast iteration can opt out with --no-default-features
# (the daemon will then refuse to start, which is correct: there is
# no functional binary without the librespot stack).
default = ["embedded-playback", "rodio-backend"]
embedded-playback = ["spotuify-daemon/embedded-playback", "spotuify-player/embedded-playback"]
system-integrations = [
  "spotuify-daemon/system-integrations",
]
alsa-backend = ["spotuify-player/alsa-backend"]
pipewire-backend = ["spotuify-player/pipewire-backend"]
rodio-backend = ["spotuify-player/rodio-backend"]
portaudio-backend = ["spotuify-player/portaudio-backend"]
loopback-cpal = ["spotuify-daemon/loopback-cpal"]

[dependencies]
async-trait = { workspace = true }
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }
spotuify-store = { workspace = true }
spotuify-search = { workspace = true }
spotuify-spotify = { workspace = true }
spotuify-player = { workspace = true }
spotuify-cli = { workspace = true }
spotuify-sync = { workspace = true }
spotuify-system = { workspace = true, features = ["hooks"] }
spotuify-daemon = { workspace = true, default-features = false }
spotuify-tui = { workspace = true }
spotuify-mcp = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
rpassword = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }

# Phase 11 (F9): Windows-only ffi for SetConsoleOutputCP(CP_UTF8).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

# Phase 11 (F8) — recommended audio-backend feature flags per target.
# Cargo cannot conditionally activate features by cfg, so CI / packagers
# pass the appropriate flag on the build command line:
#
#     # Linux gnu (alsa native, falls through pipewire-alsa shim):
#     cargo build --release \
#       --features 'embedded-playback,system-integrations,loopback-cpal,alsa-backend'
#
#     # Linux musl (no alsa headers — use the pure-Rust rodio backend):
#     cargo build --release --no-default-features \
#       --features 'embedded-playback,system-integrations,loopback-cpal,rodio-backend'
#
#     # macOS (CoreAudio via portaudio):
#     cargo build --release \
#       --features 'embedded-playback,system-integrations,loopback-cpal,portaudio-backend'
#
#     # Windows (rodio writes to WASAPI):
#     cargo build --release \
#       --features 'embedded-playback,system-integrations,loopback-cpal,rodio-backend'
#
# Pulse env vars (PULSE_PROP_application.name etc.) are set unconditionally
# at `crates/spotuify-player/src/backends/embedded/mod.rs:92` under
# `#[cfg(target_os = "linux")]` so pavucontrol shows "spotuify" by name
# regardless of which audio backend is compiled in.

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[profile.dev]
debug = 1
split-debuginfo = "unpacked"

[profile.test]
debug = 1
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
strip = true
codegen-units = 16

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1

# Phase 11 (P11.7) — `cargo deb` package metadata for the Linux gnu
# distribution channel. Run `cargo deb --no-build` after a release
# build to drop a .deb into target/{triple}/debian/.
[package.metadata.deb]
maintainer = "Bhekani Khumalo <bhekanik@gmail.com>"
copyright = "2026 Bhekani Khumalo"
license-file = ["LICENSE", "0"]
extended-description = """\
A keyboard-native Spotify TUI, CLI, and MCP server. Embedded librespot
playback with system-Keychain-backed credentials, jj-style operation
log + undo, and Wrapped-style local listening analytics."""
depends = "libasound2 (>= 1.0.16), libdbus-1-3 (>= 1.6), libssl3 | libssl1.1"
section = "sound"
priority = "optional"
assets = [
  ["target/release/spotuify", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/spotuify/README", "644"],
  ["install/systemd/user/spotuify-daemon.service", "usr/share/spotuify/install/systemd/user/", "644"],
  ["docs/recipes/README.md", "usr/share/doc/spotuify/recipes-README", "644"],
]

[lints]
workspace = true
