[package]
name = "spotuify-audio"
version.workspace = true
edition.workspace = true
publish = false
description = "Phase 17 audio visualization: real-time FFT spectrum analyzer + sink-tap + cross-platform system-audio loopback capture."

[features]
default = []
loopback-cpal = ["dep:cpal"]
# Reserved for a future Linux-only PipeWire-native capture backend.
# Today the implemented Linux path is `loopback-cpal`, which captures
# PipeWire/PulseAudio monitor devices exposed through cpal.
loopback-pipewire = []

[dependencies]
spotuify-core = { workspace = true }
realfft = "3.4"
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Optional: cpal-based loopback capture. Keep this off in default dev
# builds; packaged builds opt in via the root `loopback-cpal` feature.
cpal = { version = "0.16", optional = true }

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
