[package]
name = "spotuify-cli"
version.workspace = true
edition.workspace = true
publish = false
description = "CLI commands + output renderers + selection logic. Empty scaffold."

[dependencies]
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }
spotuify-spotify = { workspace = true }
spotuify-player = { workspace = true }
spotuify-daemon = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
