[package]
name = "spotuify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "CLI commands, output renderers, and selection logic."

[dependencies]
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }
spotuify-launcher = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
iana-time-zone = { workspace = true }
owo-colors = "4.3"
unicode-width = "0.2"
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
