[package]
name = "spotuify-daemon"
version.workspace = true
edition.workspace = true
publish = false
description = "Daemon socket server + handler. Empty scaffold; legacy daemon lives in binary's src/daemon/ during Phase 7 incremental extraction."

[dependencies]
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }
spotuify-store = { workspace = true }
spotuify-search = { workspace = true }
spotuify-spotify = { workspace = true }
spotuify-player = { workspace = true }
spotuify-sync = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[features]
default = []
# Passthrough: when set, the daemon's player_factory builds
# EmbeddedBackend instead of falling back to spotifyd for
# BackendKind::Embedded.
embedded-playback = ["spotuify-player/embedded-playback"]

[dev-dependencies]
spotuify-player = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }

[lints]
workspace = true
