[package]
name = "spotuify-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Daemon socket server, request handler, player orchestration, sync scheduler, diagnostics, and event fanout."

[dependencies]
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }
spotuify-launcher = { workspace = true }
spotuify-store = { workspace = true }
spotuify-search = { workspace = true }
spotuify-spotify = { workspace = true }
spotuify-player = { workspace = true }
spotuify-sync = { workspace = true }
spotuify-system = { workspace = true, default-features = false }
spotuify-lyrics = { workspace = true }
# Phase 17 — audio visualization. Daemon hosts the VizCoordinator actor:
# owns the SharedAnalyzer (fed by the player's sink-tap or the loopback
# stream), runs the FFT ticker, broadcasts SpectrumFrame events.
spotuify-audio = { workspace = true, default-features = false }

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
fs2 = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
sha1 = "0.11"
sha2 = { workspace = true }
sysinfo = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
# Update-awareness: poll the GitHub releases API + compare versions.
reqwest = { workspace = true }
semver = { workspace = true }

[features]
default = []
# Passthrough: when set, the daemon's player_factory builds
# EmbeddedBackend instead of falling back to spotifyd for
# BackendKind::Embedded.
embedded-playback = ["spotuify-player/embedded-playback"]
system-integrations = [
    "spotuify-system/hooks",
    "spotuify-system/media-controls",
    "spotuify-system/notifications",
    "spotuify-system/discord-rpc",
]
# Phase 17 — propagate cpal loopback into spotuify-audio. On by default
# for packaged releases only. Enable with `--features loopback-cpal` when
# testing explicit system-audio capture.
loopback-cpal = ["spotuify-audio/loopback-cpal"]

[dev-dependencies]
spotuify-player = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
