[package]
name = "spotuify-protocol"
version.workspace = true
edition.workspace = true
publish = false
description = "IPC wire protocol shared between spotuify daemon, CLI, TUI, and MCP server. Depends only on spotuify-core."

[dependencies]
spotuify-core = { workspace = true }

bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
