[package]
name = "spotuify-search"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Tantivy search index for spotuify. Rebuildable derived state from the SQLite store."

[dependencies]
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }
spotuify-store = { workspace = true }

anyhow = { workspace = true }
tantivy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
