[package]
name = "spotuify-store"
version.workspace = true
edition.workspace = true
publish = false
description = "SQLite cache for spotuify. Migrations + queries. Depends on spotuify-core and spotuify-protocol."

[dependencies]
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }

anyhow = { workspace = true }
sqlx = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
